minor spacing corrections

--- a/css/style.css
+++ b/css/style.css
@@ -218,7 +218,7 @@ img.gallery {
 
 /** kludge to fix overly wide font spacing in firefox **/
 @-moz-document url-prefix() {
-                        h1, h2 {
+                        header h1 {
                         letter-spacing: -0.1em;
                     }
 }
